infrastructure/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    # No rewrite
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: microservices.local
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 9090
